--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -177,7 +177,7 @@ input[type=submit]:active {
 
 /* -------- Header --------- */
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(img/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url("img/hero.jpg");
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -333,7 +333,7 @@ header {
 
 /* -------- Testimonials  --------- */
 .section-testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url(img/back-customers.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("img/back-customers.jpg");
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
