--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -10,6 +10,11 @@
   body { font-size: 18px; }
   section { padding: 60px 0; }
 
+  header,
+  .section-testimonials {
+    background-attachment: initial;
+  }
+
   .long-copy {
     width: 80%;
     margin-left: 10%;
